<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cv_cardView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?selectableItemBackground"
    android:theme="@style/Theme.MaterialComponents"
    app:cardBackgroundColor="#FFFFFF">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="-24dp">


        <View
            android:id="@+id/view"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="@drawable/bg2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            app:cardCornerRadius="65dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_photo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@mipmap/ic_launcher_round" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_follower"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:text="@string/label_followers"
            android:textColor="#E6EDA5"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/view"
            app:layout_constraintTop_toBottomOf="@+id/tv_username"
            android:fontFamily="sans-serif-smallcaps"/>

        <TextView
            android:id="@+id/tv_following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:text="@string/label_following"
            android:textColor="#E6EDA5"
            android:textSize="14sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif-smallcaps"
            app:layout_constraintEnd_toEndOf="@+id/tv_username_result"
            app:layout_constraintStart_toStartOf="@+id/tv_username_result"
            app:layout_constraintTop_toBottomOf="@+id/tv_username_result" />

        <TextView
            android:id="@+id/tv_follower_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="200"
            android:textColor="#E6EDA5"
            android:textColorHint="#E6EDA5"
            android:fontFamily="sans-serif-condensed-medium"
            app:layout_constraintEnd_toEndOf="@+id/tv_follower"
            app:layout_constraintStart_toStartOf="@+id/tv_follower"
            app:layout_constraintTop_toBottomOf="@+id/tv_follower" />

        <TextView
            android:id="@+id/tv_following_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="200"
            android:textColor="#E6EDA5"
            android:fontFamily="sans-serif-condensed-medium"
            android:textColorHint="#E6EDA5"
            app:layout_constraintEnd_toEndOf="@+id/tv_following"
            app:layout_constraintStart_toStartOf="@+id/tv_following"
            app:layout_constraintTop_toBottomOf="@+id/tv_following" />

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="44dp"
            android:text="@string/username"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:fontFamily="sans-serif-smallcaps"/>

        <TextView
            android:id="@+id/tv_username_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="6dp"
            android:fontFamily="sans-serif-smallcaps"
            android:letterSpacing="0.05"
            android:lineSpacingExtra="8sp"
            android:textAllCaps="true"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            app:layout_constraintStart_toEndOf="@+id/tv_username"
            app:layout_constraintTop_toTopOf="@+id/tv_username"
            tools:text="TextView" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:layout_marginTop="16dp"
            android:text="@string/company"
            android:textColor="#51B4F6"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/textView10"
            app:layout_constraintHorizontal_bias="0.333"
            app:layout_constraintStart_toStartOf="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/textView10"
            android:fontFamily="sans-serif-smallcaps"/>

        <TextView
            android:fontFamily="sans-serif-condensed-medium"
            android:id="@+id/tv_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:lineSpacingExtra="8sp"
            android:textColor="#51B4F6"
            android:textDirection="locale"
            android:textSize="14sp"
            android:textStyle="italic"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toBottomOf="@+id/textView8"
            app:layout_constraintStart_toEndOf="@+id/textView8"
            app:layout_constraintTop_toTopOf="@+id/textView8"
            tools:text="TextView" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/emailuser"
            android:textColor="#51B4F6"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/tv_follower"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintStart_toStartOf="@+id/tv_follower"
            app:layout_constraintTop_toBottomOf="@+id/tv_follower_result" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:lineSpacingExtra="8sp"
            android:textColor="#51B4F6"
            android:textSize="14sp"
            android:textStyle="italic"
            android:fontFamily="sans-serif-condensed-medium"
            app:layout_constraintBottom_toBottomOf="@+id/textView10"
            app:layout_constraintStart_toEndOf="@+id/textView10"
            app:layout_constraintTop_toTopOf="@+id/textView10"
            tools:text="TextView" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/userblog"
            android:textAlignment="viewStart"
            android:textColor="#51B4F6"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <TextView
            android:fontFamily="sans-serif-condensed-medium"
            android:id="@+id/tv_blog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:lineSpacingExtra="8sp"
            android:textColor="#51B4F6"
            android:textSize="14sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="@+id/textView12"
            app:layout_constraintStart_toEndOf="@+id/textView12"
            app:layout_constraintTop_toTopOf="@+id/textView12"
            tools:text="TextView" />


        <Button
            android:id="@+id/save_button"
            android:layout_width="80dp"
            android:layout_height="45dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="16dp"
            android:background="#51B4F6"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/save_button"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout2"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="136dp"
            android:layout_marginEnd="24dp"
            android:textColorHint="#51B4F6"
            app:boxStrokeColor="#51B4F6"
            app:hintTextColor="#51B4F6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/TextView_Notes"
                android:inputType="textMultiLine"
                android:maxHeight="180dp"
                android:textColor="@color/black"
                android:textColorHint="#51B4F6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="366dp"
                android:fontFamily="sans-serif-thin"
                android:letterSpacing="0.03"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="48dp"
            android:background="#51B4F6"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@android:string/cancel"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout2"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>